--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,31 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Challenge 1: Tic Tac Toe</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <p>Tic Tac Toe</p>
+    <button id="reset" type="button">Reset game</button>
+    <table id="play">
+      <tbody>
+        <tr>
+          <td id="0"></td>
+          <td id="1"></td>
+          <td id="2"></td>
+        </tr>
+        <tr>
+          <td id="3"></td>
+          <td id="4"></td>
+          <td id="5"></td>
+        </tr>
+        <tr>
+          <td id="6"></td>
+          <td id="7"></td>
+          <td id="8"></td>
+        </tr>
+      </tbody>
+    </table>
+    <script src="app.js"></script>
+  </body>
+</html>
