--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,18 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <title>Challenge 2: CSV Report Generator</title>
+  </head>
+  <body>
+    <p><strong>CSV Report Generator</strong></p>
+    <p>Description: Generates CSV reports from JSON data</p>
+    <form action="/" method="POST" class="form">
+      <label>Enter JSON:</label>
+      <textarea id="data" name="data" rows="15" cols="30"></textarea>
+      <input type="submit" value="submit">
+    </form>
+    <script>
+    </script>
+  </body>
+</html>
