--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -11,8 +11,9 @@
       <label>Enter JSON:</label>
       <textarea id="data" name="data" rows="15" cols="30"></textarea>
       <input type="submit" value="submit">
+      <label> CSV Report:</label>
+      <textarea id="report" name="report" rows="15" cols="60"></textarea>
     </form>
-    <script>
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
