--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -7,7 +7,7 @@
 <div id="app"></div>
 <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-<script type="text/javascript" src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
 
